--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>ua.com.alevel.nix.module2.utilclasses.Main</mainClass>
+                            <mainClass>ua.com.alevel.nix.module2.main.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
